--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,10 @@
     src: url('/WsParadoseRegular.ttf')format('truetype');
 }
 
+.tilt-root {
+    transform-style: preserve-3d;
+}
+
 .smallbutton {
     display: flex;
     cursor: pointer;
@@ -82,29 +86,17 @@
     justify-content: center;
     align-items: center;
     border-radius: 14px;
+    height: 10em;
+    width: 18em;
 }
 
 .imagesize {
     display: flex;
     flex-direction: column;
-    width: 18em;
-    height: 20.8em;
-    justify-content: center;
+    width: 'full';
+    height: 16em;
     align-items: center;
-}
-
-.projectcard {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(240, 46, 170, 0.7);
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    width: 200px;
-    flex-direction: column;
-    border-width: 2px;
-    border-color: rgba(100, 190, 90, 100)
+    cursor: pointer;
 }
 
 .paradose {
