--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@
 
 @font-face {
     font-family: 'Thernaly';
-    src: url('/fonts/Thernaly-YqjWv.ttf');
+    src: url('/fonts/thernaly.ttf')format('truetype');;
 }
 
 @font-face {
